--- a/Views/MFAView.axaml
+++ b/Views/MFAView.axaml
@@ -3,14 +3,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:Compass.ViewModels"
-             x:DataType="vm:LoginViewModel"
+             x:DataType="vm:MFAViewModel"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Compass.Views.MFAView">
     
     <StackPanel Spacing="10" Margin="20">
         <TextBlock Text="Enter the 6-digit code sent to your email" />
-        <TextBox Name="InputCodeBox" Text="{Binding CurrentInputCode}" Width="200"/>
-        <Button Name="VerifyButton" Content="Verify" Command="{Binding }" />
+        <TextBlock Name="ErrorTextBlock" Foreground="Red" HorizontalAlignment="Center"/>
+        <TextBox Name="InputCodeBox" Text="{Binding InputCode}" Width="200"/>
+        <Button Name="VerifyButton" Content="Verify" />
     </StackPanel>
     
 </UserControl>
