--- a/Views/ReportsUC.axaml
+++ b/Views/ReportsUC.axaml
@@ -8,6 +8,7 @@
     
     <UserControl.Resources>
         <local:OptionStringConverter x:Key="OptionStringConverter"/>
+        <local:BoolToYesNoConverter x:Key="BoolToYesNoConverter" />
     </UserControl.Resources>
     
     <StackPanel>
@@ -62,7 +63,7 @@
                                 <TextBlock Text="Severity: " FontWeight="Bold" TextWrapping="Wrap"/>
                                 <TextBlock Text="{Binding severity}" TextWrapping="Wrap"/>
                                 <TextBlock Text="Notified Social Services? " FontWeight="Bold" TextWrapping="Wrap"/>
-                                <TextBlock Text="{Binding raised_to_social_care}" TextWrapping="Wrap"/>
+                                <TextBlock Text="{Binding raised_to_social_care, Converter={StaticResource BoolToYesNoConverter}}" TextWrapping="Wrap"/>
                             </StackPanel>
                             
                             <!-- Selected Report -->
